--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_login: ^2.0.0
+  flutter_login: 
   flutter_svg: ^0.22.0
   firebase_auth:
   firebase_core:
   flutter_easyloading: ^3.0.0
   google_sign_in:
   provider:
+  cloud_firestore: 
 
 dev_dependencies:
   flutter_test:
